--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "devDependencies": {
     "bun-types": "latest"
   },
+  "scripts": {
+    "start": "bun run src/index.ts"
+  },
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
     "@hxronetwork/dexterity-ts": "^1.6.33",
